fix: stretch bg on y-axis only, repeat x-axis

--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ body {
 body {
 	display: flex;
 	flex-grow: 1;
-	background: 0% 0% / 800px repeat url(https://images.unsplash.com/photo-1555511844-51bed8c7e58a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1587&q=80);
+	background: left/auto 100% repeat-y url(https://images.unsplash.com/photo-1555511844-51bed8c7e58a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1587&q=80);
 }
 
 .leftSide {
